tests/paczka1/small_fuzzy/23871961.err
Error in line 4: otNFWrsR A953 68,8
Error in line 1: mxCpAdH A868 57,8
Error in line 2: 91267 S685 28,8
Error in line 13: mxCpAdH A953 68,7
Error in line 12: tOfUUK S685 20,0
